--- a/Nested_CV_example.ipynb
+++ b/Nested_CV_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNONJqMFQXDx7zMrQZFbBnQ",
+      "authorship_tag": "ABX9TyMzQJ67L7TL2rzGMni2I2Hh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,6 +152,89 @@
           "name": "stdout",
           "text": [
             "NEsted CV mean accuracy: 0.9733333333333334\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vMorF9YMvWn6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "RbnJc2D4vWka"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Combine nested CV with different seeds with same base learner"
+      ],
+      "metadata": {
+        "id": "OSnRQrVgvWaz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.model_selection import KFold, cross_val_score\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "X,y=load_iris(return_X_y=True)\n",
+        "\n",
+        "outer_folds=5\n",
+        "outer_cv=KFold(n_splits=outer_folds, shuffle=True, random_state=42)\n",
+        "outer_socres=[]\n",
+        "\n",
+        "seed_values=[123,234,345]\n",
+        "\n",
+        "for trian_index,test_index in outer_cv.split(X):\n",
+        "  X_train,X_test=X[train_index],X[test_index]\n",
+        "  y_train,y_test=y[train_index],y[test_index]\n",
+        "\n",
+        "  prediction=[]\n",
+        "\n",
+        "  for seed in seed_values:\n",
+        "    base_learner=RandomForestClassifier(random_state=seed)\n",
+        "\n",
+        "    base_learner.fit(X_train,y_train)\n",
+        "\n",
+        "    y_pred=base_learner.predict(X_test)\n",
+        "\n",
+        "    prediction.append(y_pred)\n",
+        "\n",
+        "  ensemble_predictins=sum(prediction)/len(prediction)\n",
+        "\n",
+        "  accuracy=np.mean(ensemble_predictins==y_test)\n",
+        "\n",
+        "  outer_scores.append(accuracy)\n",
+        "\n",
+        "mean_accuracy=np.mean(outer_scores)\n",
+        "\n",
+        "print(\"Nested CV mean accuracy:\",mean_accuracy)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zBfUdNBGvhIJ",
+        "outputId": "7de9d98d-5d1d-4fba-cbf9-c9d70e1860a4"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nested CV mean accuracy: 0.9833333333333334\n"
           ]
         }
       ]
