--- a/Nested_CV_example.ipynb
+++ b/Nested_CV_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzQJ67L7TL2rzGMni2I2Hh",
+      "authorship_tag": "ABX9TyOeXIMXQ+7CSrZa44yYrKi3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "JYnn3Nnqnv4V"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -143,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wK1mNyB0nTli",
-        "outputId": "fd127b60-7bf6-4929-876a-f5edf82d4b7c"
+        "outputId": "87f9f116-ffb0-49d3-a0f8-5b95cee6767f"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,15 +226,115 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBfUdNBGvhIJ",
-        "outputId": "7de9d98d-5d1d-4fba-cbf9-c9d70e1860a4"
+        "outputId": "dc696646-da58-4558-dee7-b71aa245e759"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Nested CV mean accuracy: 0.9833333333333334\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Combine the nested cross-validation technique for model selection and hyperparameter tuning, with the ensemble of a single base learner using different seeds."
+      ],
+      "metadata": {
+        "id": "LGXQP1NXx32M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.model_selection import KFold, GridSearchCV\n",
+        "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "X,y=load_iris(return_X_y=True)\n",
+        "\n",
+        "outer_folds=5\n",
+        "outer_cv=KFold(n_splits=outer_folds,shuffle=True, random_state=42)\n",
+        "outer_scores=[]\n",
+        "\n",
+        "#Define different models\n",
+        "\n",
+        "models={\n",
+        "    'RandomForest':(RandomForestClassifier(),{\n",
+        "        'n_estimators':[50,100,150],\n",
+        "        'max_depth':[None,5,10],\n",
+        "        'min_samples_split':[2,5]\n",
+        "    } ),\n",
+        "    'SVM':(SVC(),{\n",
+        "        'C':[1,10,100],\n",
+        "        'kernel':['linear','rbf']\n",
+        "    }),\n",
+        "    'GradientBoosting':(GradientBoostingClassifier(),{\n",
+        "        'n_estimators':[50,100,150],\n",
+        "        'learning_rate':[0.1,0.01],\n",
+        "        'max_depth':[3,5]\n",
+        "\n",
+        "    })\n",
+        "}\n",
+        "\n",
+        "seed_values=[324,562,987]\n",
+        "\n",
+        "for train_index,test_index in outer_cv.split(X):\n",
+        "  X_train,X_test=X[train_index],X[test_index]\n",
+        "  y_train,y_test=y[train_index],y[test_index]\n",
+        "\n",
+        "  predictions=[]\n",
+        "\n",
+        "  for model_name,(model, param_grid) in models.items():\n",
+        "    inner_cv=KFold(n_splits=3,shuffle=True, random_state=42)\n",
+        "    grid_search=GridSearchCV(estimator=model, param_grid=param_grid,cv=inner_cv)\n",
+        "\n",
+        "    grid_search.fit(X_train,y_train)\n",
+        "    best_model=grid_search.best_estimator_\n",
+        "\n",
+        "    model_predictions=[]\n",
+        "\n",
+        "    for seed in seed_values:\n",
+        "      base_learner=best_model.__class__(**best_model.get_params())\n",
+        "      base_learner.set_params(random_state=seed)\n",
+        "      base_learner.fit(X_train,y_train)\n",
+        "      y_pred=base_learner.predict(X_test)\n",
+        "      model_predictions.append(y_pred)\n",
+        "\n",
+        "    ensemble_predictions=sum(model_predictions)/len(model_predictions)\n",
+        "    predictions.append(ensemble_predictions)\n",
+        "  accuracies=[np.mean(pred==y_test) for pred in predictions]\n",
+        "  outer_scores.append(accuracies)\n",
+        "\n",
+        "mean_scores=np.mean(outer_scores,axis=0)\n",
+        "model_names=list(models.keys())\n",
+        "\n",
+        "for name,score in zip(model_names,mean_scores):\n",
+        "  print(f\"{name} - Mean Accuracy : {score: .4f}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aR8CI8M5x5qH",
+        "outputId": "272c4fe2-36a2-4072-bbfb-bfbe198fd70a"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RandomForest - Mean Accuracy :  0.9533\n",
+            "SVM - Mean Accuracy :  0.9667\n",
+            "GradientBoosting - Mean Accuracy :  0.9533\n"
           ]
         }
       ]
