--- a/Nested_CV_example.ipynb
+++ b/Nested_CV_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeXIMXQ+7CSrZa44yYrKi3",
+      "authorship_tag": "ABX9TyPJrXJxJolHK+74qAt2nHWv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wK1mNyB0nTli",
-        "outputId": "87f9f116-ffb0-49d3-a0f8-5b95cee6767f"
+        "outputId": "6a28b652-fac9-44be-886c-a43cd36c50c1"
       },
       "execution_count": 5,
       "outputs": [
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBfUdNBGvhIJ",
-        "outputId": "dc696646-da58-4558-dee7-b71aa245e759"
+        "outputId": "0fc4cd2c-657d-4fcb-8fab-3f71cead0741"
       },
       "execution_count": 6,
       "outputs": [
@@ -324,9 +324,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aR8CI8M5x5qH",
-        "outputId": "272c4fe2-36a2-4072-bbfb-bfbe198fd70a"
+        "outputId": "a9095c9a-b176-4095-daf6-d6933da8a0e3"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,6 +335,112 @@
             "RandomForest - Mean Accuracy :  0.9533\n",
             "SVM - Mean Accuracy :  0.9667\n",
             "GradientBoosting - Mean Accuracy :  0.9533\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Grid Search exhaustively explores the hyperparameter space, it can be computationally expensive. Random Search is less intensive but may not find the optimal combination. Bayesian Optimization strikes a balance between the two by using probabilistic models to guide the search intelligently."
+      ],
+      "metadata": {
+        "id": "QXVJldXqlBot"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install scikit-optimize"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W83mK_sjlp2R",
+        "outputId": "1bfb8b9f-e7dc-47f8-ae1c-05c822838f97"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting scikit-optimize\n",
+            "  Downloading scikit_optimize-0.9.0-py2.py3-none-any.whl (100 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/100.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.0/100.3 kB\u001b[0m \u001b[31m1.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m100.3/100.3 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.10/dist-packages (from scikit-optimize) (1.3.2)\n",
+            "Collecting pyaml>=16.9 (from scikit-optimize)\n",
+            "  Downloading pyaml-23.7.0-py3-none-any.whl (17 kB)\n",
+            "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.10/dist-packages (from scikit-optimize) (1.23.5)\n",
+            "Requirement already satisfied: scipy>=0.19.1 in /usr/local/lib/python3.10/dist-packages (from scikit-optimize) (1.10.1)\n",
+            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.10/dist-packages (from scikit-optimize) (1.2.2)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from pyaml>=16.9->scikit-optimize) (6.0.1)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.20.0->scikit-optimize) (3.2.0)\n",
+            "Installing collected packages: pyaml, scikit-optimize\n",
+            "Successfully installed pyaml-23.7.0 scikit-optimize-0.9.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bayesian search optimization\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.svm import SVC\n",
+        "from skopt import BayesSearchCV\n",
+        "\n",
+        "#load the data\n",
+        "iris=load_iris()\n",
+        "X,y=iris.data, iris.target\n",
+        "\n",
+        "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42)\n",
+        "\n",
+        "param_space={\n",
+        "    'C':(0.01,10.0,'log-uniform'),\n",
+        "    'gamma':(0.001,1.0,'log-uniform'),\n",
+        "    'kernel':['linear','poly','rbf']\n",
+        "}\n",
+        "\n",
+        "#initilize bayesian object\n",
+        "optimal_params=BayesSearchCV(\n",
+        "    SVC(),\n",
+        "    param_space,\n",
+        "    n_iter=50,\n",
+        "    cv=5,\n",
+        "    random_state=42\n",
+        ")\n",
+        "\n",
+        "optimal_params.fit(X_train,y_train)\n",
+        "#Perform optimization to find best params\n",
+        "print(\"Best hyperparameters: \",optimal_params.best_params_)\n",
+        "print(\"Best score :\", optimal_params.best_score_)\n",
+        "\n",
+        "#Evaluate optimized model on test set\n",
+        "best_svm=optimal_params.best_estimator_\n",
+        "test_score=best_svm.score(X_test,y_test)\n",
+        "\n",
+        "print(\"Test set accuracy :\", test_score)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mrCjG8KwlIUB",
+        "outputId": "208c4b22-3b75-489d-914b-95c4fc8a0487"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best hyperparameters:  OrderedDict([('C', 1.5925169151603527), ('gamma', 0.6578232405415442), ('kernel', 'linear')])\n",
+            "Best score : 0.9583333333333334\n",
+            "Test set accuracy : 1.0\n"
           ]
         }
       ]
